--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "4298bbbc-8d80-4a73-826f-4ae31c85d61f"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
